[tool.poetry]
name = "pyuule"
version = "0.1.0"
description = "A library for decoding and encoding UULEs"
authors = ["Ryan Pepper <ryan.pepper1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
